--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
     <h1>Hola Mundo</h1>
     <h2>Saludo</h2>
     <h3>modificado nuevo</h3>
+    <table>
+        <tr>
+            <td>dato1</td>
+            <td>dato2</td>
+            <td>dato3</td>
+            <td>dato4</td>
+        </tr>
+    </table>
 </body>
 </html>
